# PinocchioPlus

./: .gitignore  LICENSE  README.md  experiment.json  generate-gmake2.sh  generate-vs2022.bat  premake5.lua
PinocchioJingma/: CMakeLists.txt  premake5.lua
PinocchioJingma/AttachWeights/: stdafx.h
PinocchioJingma/Pinocchio/: intersector.cpp  mesh.h  pointprojector.h  quaddisttree.h
PinocchioPlus/: CMakeLists.txt  README.txt  premake5.lua
PinocchioPlus/AttachWeights/: AttachWeights.cpp  ReadMe.txt  stdafx.h
PinocchioPlus/Demo/: DisplayMesh.h  MyWindow.cpp  MyWindow.h  defmesh.cpp  defmesh.h  demoUI.cpp  filter.cpp  filter.h  motion.cpp  motion.h  processor.cpp
PinocchioPlus/DemoUI/: DisplayMesh.h  MyWindow.cpp  MyWindow.h  defmesh.cpp  defmesh.h  demoUI.cpp  filter.cpp  filter.h  motion.cpp  motion.h  processor.cpp
PinocchioPlus/Experiment/: main.cpp
PinocchioPlus/Pinocchio/: CMakeLists.txt  Core.h  Pinocchio.cpp  Pinocchio.h  attachment.cpp  attachment.h  debugging.h  deriv.h  discretization.cpp  dtree.h  embedding.cpp  graphutils.cpp  graphutils.h  hashutils.h  indexer.cpp  indexer.h  intersector.h  lsqSolver.cpp  lsqSolver.h  mathutils.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  pinocchio.h  pinocchioApi.cpp  pinocchioApi.h  pointprojector.h  quaddisttree.h  rect.h  refinement.cpp  skeleton.cpp  skeleton.h  transform.h  utils.h  vector.h  vecutils.h
PinocchioPlus/Pinocchio/pinocchio/: attachment.cpp  attachment.h  deriv.h  discretization.cpp  embedding.cpp  graphutils.h  hashutils.h  indexer.h  intersector.cpp  intersector.h  lsqSolver.cpp  lsqSolver.h  mesh.cpp  mesh.h  multilinear.h  pinocchioApi.cpp  pinocchioApi.h  pointprojector.h  quaddisttree.h  rect.h  skeleton.cpp  skeleton.h  utils.h
PinocchioPlus/Pinocchio/pinocchio/math/: DualQuaternion.cpp  DualQuaternion.h  matrix.cpp  transform.h  vector.h  vecutils.h
PinocchioPlus/Pinocchio/pinocchio/tools/: Log.cpp  Log.h
PinocchioPlus/Pinocchio/tool/: Timer.h
PinocchioPlus/Test/: main.cpp  test_basic.cpp  test_basic.h  test_mesh.cpp  test_mesh.h
data/legacy/: change_animation.py  walk_made_by_yulong.txt
mesh_fix&simplify/: fix.py
mesh_fix&simplify/HW3-CodeFramework/: CMakeLists.txt  task1.cpp  task2.cpp
mesh_fix&simplify/HW3-CodeFramework/include/: half_edge.hpp  mesh.hpp
mesh_fix&simplify/HW3-CodeFramework/src/: half_edge.cpp  mesh.cpp
